# pq-vrf

./: Cargo.toml  README.md
faest-signatures/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cbindgen.toml
faest-signatures/.github/workflows/: build.yaml
faest-signatures/examples/: simple.rs
faest-signatures/faest-benches/: Cargo.toml
faest-signatures/faest-benches/benches/: bench.rs
faest-signatures/src/: .gitignore  aes.rs  bavc.rs  capi.rs  faest.rs  internal_keys.rs  lib.rs  lib_vrf.rs  parameter.rs  parameter_vrf.rs  prg.rs  random_oracles.rs  rijndael_32.rs  universal_hashing.rs  utils.rs  vole.rs  witness.rs  witness_vrf.rs  zk_constraints.rs  zk_constraints_vrf.rs
faest-signatures/src/fields/: large_fields.rs  large_fields_constants.rs  mod.rs  small_fields.rs  x86_simd_large_fields.rs
faest-signatures/src/prover/: aes.rs  byte_commitments.rs  encryption.rs  field_commitment.rs  key_expansion.rs  mod.rs  owf_constraints.rs
faest-signatures/src/prover_vrf/: mod.rs  owf_constraints_vrf.rs
faest-signatures/src/verifier/: aes.rs  encryption.rs  key_expansion.rs  mod.rs  owf_constraints.rs  vole_commitments.rs
faest-signatures/tests/: nist.rs
faest-signatures/tests/data/: AesExtendedWitness.json  AesVerify.json  DataVoleCommit.json  DataVoleReconstruct.json  EM-ExtendedWitness.json  EmVerify.json  ExtendedFields.json  FaestProve.json  LargeFieldByteCombine.json  LargeFieldByteCombineBits.json  LargeFieldMul.json  bavc.json  bavc_em.json  decode_challenge.json  leaf_com.json  leaf_com_em.json  leafhash_128.json  leafhash_192.json  leafhash_256.json  reduced_PQCsignKAT_faest_128f.rsp  reduced_PQCsignKAT_faest_128s.rsp  reduced_PQCsignKAT_faest_192f.rsp  reduced_PQCsignKAT_faest_192s.rsp  reduced_PQCsignKAT_faest_256f.rsp  reduced_PQCsignKAT_faest_256s.rsp  reduced_PQCsignKAT_faest_em_128f.rsp  reduced_PQCsignKAT_faest_em_128s.rsp  reduced_PQCsignKAT_faest_em_192f.rsp  reduced_PQCsignKAT_faest_em_192s.rsp  reduced_PQCsignKAT_faest_em_256f.rsp  reduced_PQCsignKAT_faest_em_256s.rsp  rijndael_data.json  vc_com.json  vc_open.json  vc_reconstruct.json  vole.json  vole_em.json  volehash_128.json  volehash_192.json  volehash_256.json  (+3 more)
src/: lib.rs  main.rs  vrf.rs
