[package]
name = "pq-vrf"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8"
faest = { path = "faest-signatures" }
sha3 = "0.10"
# `aes` uses generic-array 0.14; `faest` uses 1.x — keep both with explicit names.
generic-array = { package = "generic-array", version = "0.14" }
generic-array-1 = { package = "generic-array", version = "1" }
rand = { version = "0.8", features = ["std_rng"] }
rand_core = "0.6"
rand_chacha = "0.3"
