[package]
name = "faest-benches"
version = "0.1.0"
publish = false
license = "Apache-2.0 OR MIT"
edition = "2024"
rust-version = "1.85"

[dependencies]
faest = { path = "../", features = ["randomized-signer"] }

[dev-dependencies]
nist-pqc-seeded-rng = "0.2.1"
rand = "0.8"
criterion = "0.7"

[lib]
test = false
doc = false
doctest = false

[[bench]]
name = "faest-bench"
path = "benches/bench.rs"
harness = false
test = false
